--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
       name="description"
       content="Website BananaTalk Language Learning Polyglot"
     />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />    <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
